# Diplom

./: .env.example  .gitignore  README.md  docker-compose.yml  index.html  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test.py  vite.config.js  ~$плом_Матвеев_Плугатырев_с_введением.docx
alembic/: env.py
alembic/versions/: 0952b8490745_groups_course_nullable.py  151ac8841d4a_init_schema.py  208289511f63_init_schema.py  4f3b2c1d9e7a_groups_course_nullable.py  64d0d8ea6fd2_add_task_source_fields.py  8fc43ceda67d_files_metadata_columns.py  aa57259d02ce_init_schema.py  b7a2d0f7c9e1_frontend_contract_backend.py  c33882adedcf_fix_orm_logic.py  d1e8f6a7b3c2_add_tasks_dashboard.py
app/: bootstrap.py  config.py  database.py  main.py
app/api/: __init__.py  auth.py  courses.py  files.py  groups.py  managers.py  organization.py  student_portal.py  students.py  tasks.py  teacher_portal.py  teachers.py
app/docs/: API_CONTRACT_COURSES.md  API_CONTRACT_GROUPS.md  API_CONTRACT_STUDENTS.md  API_CONTRACT_TEACHERS.md  API_ERRORS.md  DECISIONS.md
app/models/: __init__.py  courses.py  groups.py  managers.py  organization.py  portal.py  students.py  tasks.py  teachers.py
app/repositories/: __init__.py  (+8 more)
backend/: crud.py  crud_courses.py  crud_group.py  crud_students.py  crud_teacher.py  database.py  main.py  models.py  schemas.py
docs/: student-endpoints.md  teacher-endpoints.md  teacher-scheduling.md
mock/: my_server.js  server.example.js  server.js
src/: index.html  main.js  router.js  style.css
tests/: conftest.py  test_backend_api.py
(+240 files in other folders)
