[project]
name = "diplom"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.3",
    "argon2-cffi>=25.1.0",
    "email-validator>=2.3.0",
    "fastapi[standard]>=0.128.0",
    "passlib>=1.7.4",
    "pyjwt[crypto]>=2.11.0",
    "pytest>=9.0.2",
    "python-multipart>=0.0.22",
    "sqlalchemy>=2.0.46",
]
